svclusterip.yaml
apiVersion: v1
kind: Service
metadata:  
  name: svc-custerip
spec:  
  selector:    
    app: supawit-app
  ports:    
    - protocol: TCP
      port: 3000      
      targetPort: 3000
